sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: Boolean does not take parameters
while (swapped()) {
              ^