sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	
var swapped= true

while (swapped()) {

for (i <- 0 to getNombreValeurs()-2){
	if (plusPetit(i+1,i)) {
	echange(i+1,i)	
	swapped=true
	}
	else swapped=false
}

	
}	
}
